overflow contact fixed

--- a/aerial.css
+++ b/aerial.css
@@ -529,6 +529,9 @@ boxtext1 {
   font-family: monospace;
   color: #45a29e;
 }
+.email {
+font-size: 100%
+}
 
 @media screen and (max-width: 1430px) {
   #header {
